Updated 3 files via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ blocks:
             -
                 video_path: /uploads/WEBSITE-BANNER.mp4
                 video_type: mp4
-        placeholder_image: /uploads/bp4a8234-hdr.jpg
+        placeholder_image: /uploads/rectangle-1.png
         controls: false
         autoplay: true
         text-alignment: center
@@ -46,75 +46,21 @@ blocks:
         collapse-bottom-space: false
         color-scheme: leaf-100
     -
-        _id: banner-split
-        block-content-html: >-
-            <h3 class="sub-heading">Holistic Wisdom</h3><h2
-            class="heading-md">Our Ayurvedic Approach</h2><p
-            class="">Sukhavati’s stunning results over the past 13 years are
-            based on the timeless wisdom of Ayurvedic medicine. Our unique
-            approach is in making Ayurveda simple, practical and easily
-            applicable for everyone. Whether you already love Ayurveda, or have
-            yet to experience its benefits, we’re here to guide you. If you
-            simply want to rest and relax in the ultimate luxury, or get the
-            profound benefits of a deep cleanse, you will receive an
-            comprehensive program tailored specifically to your needs by our
-            world-class doctors. Everything at Sukhavati is flexible to what you
-            most need, helping you achieve better health in a way that works for
-            you.</p><p><a class="button"
-            href="https://bookings.sukhavatibali.com/en/product/panchakarma">BOOK
-            NOW</a></p>
-        background-desktop-image: /uploads/bp4a7846-hdr.jpg
-        background-mobile-image: /uploads/bp4a7846-hdr.jpg
-        background-alt:
-        desktop-collapse-bg-padding: true
-        desktop-image-position: right
-        section-gap: 2rem
-        text-alignment: left
-        vert-alignment: bottom
-        mobile-image-position: bottom
-        mobile-collapse-bg-padding: false
-        img_aspect: Square
-        collapse-top-space: false
-        collapse-bottom-space: false
-        color-scheme: leaf-100
-    -
         _id: horizontal-scroll-basic
         block-content-html: >-
-            <h3 class="sub-heading">ALL-INCLUSIVE WELLNESS RETREAT</h3><h2
-            class="heading-lg">Program Overview</h2><p>At Sukhavati, we offer a
-            range of transformative solutions tailored to your unique health
-            goals. Whether you are seeking rejuvenation, detoxification, a
-            wellness reset, or to beat the burnout of modern life, our programs
-            combine 6000+ year old Ayurvedic treatments, yoga, cooking classes,
-            health seminars and the most delicious vegetarian cuisine. Your
-            program is specifically designed to help you achieve your goals
-            whether that be weight loss, improved digestion, better sleep, to
-            reduce stress or anxiety, to heal a specific health condition or
-            simply rediscover your old spark. You will also receive ongoing
-            education to help you maintain optimal health even after you
-            leave.</p>
+            <h3 class="sub-heading">WORKING WITH US</h3><h2
+            class="heading-lg">Extraordinary tailored digital
+            presence</h2><p>With over a decade of experience in web development,
+            and a dedication best-practices we’ll build you a website that’s not
+            only beautiful but that also optimised for speed, performance,
+            mobile-friendliness and SEO.</p>
         image-width: max(25%,  8rem)
         img_aspect: Portrait
         scroll-items:
             -
-                heading: LUXURY RETREAT
-                image: /uploads/bp4a8234-hdr.jpg
-                description:
-                link:
-            -
-                heading: PERSONALISED WELLNESS
-                image: /uploads/dsc06971.jpg
-                description:
-                link:
-            -
-                heading: AYUVEDIC TREATMENTS
-                image: /uploads/dsc07068.jpg
-                description:
-                link:
-            -
-                heading: NOURISHING MEALS
-                image: /uploads/dsc07185.jpg
-                description:
+                heading: VISUAL
+                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+                description: Brand aligned
                 link:
         color-scheme: leaf-300
     -
