removed old place holder images

--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@ blocks:
         image-width: max(25%,  8rem)
         img_aspect: Portrait
         scroll-items:
-            -
-                heading: VISUAL
-                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
-                description: Brand aligned
-                link:
+            - image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+              description: Brand aligned
+              block-content-html: >-
+                <h3>VISUAL</h3>
+                <h2>Brand aligned </h2> <p>We’ll custom design your website to align with all the Regent brand standards, including consistent use of the color palettes & typography. </p>
+              link:
         color-scheme: leaf-300
     -
         _id: banner
