Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@ blocks:
         overlay-opacity: 0.5op
         min-height: 80vh
         color-scheme: leaf-100
+    -
+        _id: text-block
+        block-content-html: "<h2>It would be our pleasure to work together on the new Regent Bali Canggu website.</h2><p></p><p>Our team combines high-end visual design with robust, future-focused development—delivering a digital experience that’s as elegant and intuitive as the property itself.<br /><br />We specialize in creating flexible, content-driven designs that showcase luxury spaces in their best light, capturing the essence of your property through elegant visuals, adaptive layouts, and a seamless user experience. Every element will be crafted to support your brand, engage your audience, and provide your team with intuitive tools for easy updates and future growth.<br />\L- Sincerely, Kelapa Creative Team.</p><p><a class=\"button-featured\" href=\"/temp.pdf\">DOWNLOAD PROPOSAL</a></p>"
+        content-max-width:
+        text-alignment: center
+        color-scheme: leaf-100
+        min-height: 50vh
 seo:
     title: >-
         Sukhavati Wellness Retreat – Transformative Ayurvedic Health &
