--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@ blocks:
         overlay-opacity: 0.2op
         min-height: 80vh
         color-scheme: dark
-    -
-        _id: banner-split
+    -   _id: banner-split
         block-content-html: >-
             <h3 class="sub-heading">LUXURY wellness</h3><h2
             class="heading-md">Your Health Transformation</h2><p>Sukhavati is a
