Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -16,34 +16,6 @@ blocks:
         overlay-opacity: 0.2op
         min-height: 80vh
         color-scheme: dark
-    -   _id: banner-split
-        block-content-html: >-
-            <h3 class="sub-heading">LUXURY wellness</h3><h2
-            class="heading-md">Your Health Transformation</h2><p>Sukhavati is a
-            world-class, boutique retreat designed to help you achieve profound,
-            life-changing health transformation in a serene, natural
-            environment. Nestled in a quiet Balinese village, our luxurious
-            sanctuary provides a peaceful escape from the demands of modern
-            life. With personalized wellness and rejuvenating treatments,
-            Sukhavati allows you to deeply relax, rejuvenate, heal, and begin to
-            integrate a lifestyle of balance and vitality for your best long
-            term well-being.</p><p><a class="button"
-            href="https://bookings.sukhavatibali.com/en/product/panchakarma">Book
-            Now</a></p>
-        background-desktop-image: /uploads/stairs-used-1.jpg
-        background-mobile-image: /uploads/stairs-used.jpg
-        background-alt:
-        desktop-collapse-bg-padding: true
-        desktop-image-position: left
-        section-gap: 2rem
-        text-alignment: left
-        vert-alignment: bottom
-        mobile-image-position: bottom
-        mobile-collapse-bg-padding: false
-        img_aspect: Portrait
-        collapse-top-space: false
-        collapse-bottom-space: false
-        color-scheme: leaf-100
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
@@ -111,6 +83,26 @@ blocks:
         text-alignment: center
         color-scheme: leaf-100
         min-height: 50vh
+    -
+        _id: banner-video-split
+        block-content-html: ''
+        background-desktop-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+        background-mobile-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+        videos:
+            -
+                video_path: /uploads/WEBSITE-BANNER.mp4
+                video_type: mp4
+        background-alt:
+        desktop-collapse-bg-padding: true
+        desktop-image-position: right
+        text-alignment: left
+        vert-alignment: bottom
+        mobile-image-position: bottom
+        mobile-collapse-bg-padding: true
+        img_aspect: Square
+        collapse-top-space: false
+        collapse-bottom-space: false
+        color-scheme: leaf-500
 seo:
     title: >-
         Sukhavati Wellness Retreat – Transformative Ayurvedic Health &
