top overlay section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@ blocks:
         overlay-opacity: 0.2op
         min-height: 80vh
         color-scheme: dark
+    -   _id: text-block-top-overlap
+        block-content-html: <h3>REGENT BALI CANGGU</h3><h2 class="heading-lg">A coastal haven where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are silhouetted in the morning sun, boards  under arms ready to take on Bali's famous reef breaks. Watching the  waves, listening to the call of the Indian Ocean, you might catch the  scent of incense or the melody of the gamelan emitting from Pura Batu  Mejan, a centuries old sea temple set on rock as black as jet. A blessed way to begin each day.</p><p>A METICULOUSLY CURATED RESORT DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR YOU.</p> <a href="" class="button-featured">DOWNLOAD PROPOSAL</a>
+        content-max-width: 44rem
+        text-alignment: center
+        color-scheme: base
+        min-height: 50vh
     -   _id: banner-split
         block-content-html: >-
             <h3 class="sub-heading">LUXURY wellness</h3><h2
@@ -43,7 +49,7 @@ blocks:
         img_aspect: Portrait
         collapse-top-space: false
         collapse-bottom-space: false
-        color-scheme: leaf-100
+        color-scheme: base
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
