Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@ blocks:
         overlay-opacity: 0.2op
         min-height: 80vh
         color-scheme: dark
-    -   _id: text-block-top-overlap
-        block-content-html: <h3>REGENT BALI CANGGU</h3><h2 class="heading-lg">A coastal haven where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are silhouetted in the morning sun, boards  under arms ready to take on Bali's famous reef breaks. Watching the  waves, listening to the call of the Indian Ocean, you might catch the  scent of incense or the melody of the gamelan emitting from Pura Batu  Mejan, a centuries old sea temple set on rock as black as jet. A blessed way to begin each day.</p><p>A METICULOUSLY CURATED RESORT DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR YOU.</p> <a href="" class="button-featured">DOWNLOAD PROPOSAL</a>
+    -
+        _id: text-block-top-overlap
+        block-content-html: "<h3>REGENT BALI CANGGU</h3><h2 class=\"heading-lg\">A coastal haven where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are silhouetted in the morning sun, boards  under arms ready to take on Bali's famous reef breaks.\_Watching the  waves, listening to the call of the Indian Ocean, you might catch the  scent of incense or the melody of the gamelan emitting from Pura Batu  Mejan, a centuries old sea temple set on rock as black as jet. A blessed way to begin each day.</p><p>A METICULOUSLY CURATED RESORT DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR YOU.</p> <a href=\"\" class=\"button-featured\">DOWNLOAD PROPOSAL</a>"
         content-max-width: 44rem
         text-alignment: center
         color-scheme: base
         min-height: 50vh
-    -   _id: banner-split-video
+    -
+        _id: banner-split-video
         block-content-html: >-
             <h3 class="sub-heading">LUXURY wellness</h3><h2
             class="heading-md">Your Health Transformation</h2><p>Sukhavati is a
@@ -117,7 +119,26 @@ blocks:
         text-alignment: center
         color-scheme: leaf-100
         min-height: 50vh
-    
+    -
+        _id: banner-split-video
+        block-content-html: "<h3>HIGH IMPACT VISUALS</h3><h2>Designed to captivate\L&amp; enchant</h2><p>With a strong understanding of both the Regent brand &amp; the resort itself, we bring a depth of knowledge that allows us to thoughtfully create a digital experience that captivates and enchants. That brings the magic of the Regent brand to live on the screen and leverages all of the high-impact visuals we’re created for you to a modern new website. <br /><br />Rich visual experiences, intentional storytelling and subtle animations &amp; interactions give an experience that brings joy (and increases direct bookings).</p>"
+        background-desktop-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+        background-mobile-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+        videos:
+            -
+                video_path: /uploads/WEBSITE-BANNER.mp4
+                video_type: mp4
+        background-alt:
+        desktop-collapse-bg-padding: true
+        desktop-image-position: left
+        text-alignment: left
+        vert-alignment: bottom
+        mobile-image-position: bottom
+        mobile-collapse-bg-padding: true
+        img_aspect: Square
+        collapse-top-space: false
+        collapse-bottom-space: false
+        color-scheme: leaf-500
 seo:
     title: >-
         Sukhavati Wellness Retreat – Transformative Ayurvedic Health &
