added temp video

--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@ blocks:
             term well-being.</p><p><a class="button"
             href="https://bookings.sukhavatibali.com/en/product/panchakarma">Book
             Now</a></p>
-        background-desktop-image: /uploads/stairs-used-1.jpg
-        background-mobile-image: /uploads/stairs-used.jpg
+        background-desktop-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+        background-mobile-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
         background-alt:
+        videos:
+            - video_path: /uploads/WEBSITE-BANNER.mp4
+              video_type: mp4
         desktop-collapse-bg-padding: true
         desktop-image-position: left
         section-gap: 2rem
@@ -120,13 +123,9 @@ blocks:
     
 seo:
     title: >-
-        Sukhavati Wellness Retreat – Transformative Ayurvedic Health &
-        Rejuvenation
+        Reagent
     description: >-
-        Experience life-changing health transformation at Sukhavati Wellness
-        Retreat. Nestled in Bali, our all-inclusive Ayurvedic programs offer
-        personalized treatments, yoga, and more to rejuvenate your mind, body,
-        and soul. Start your wellness journey today.
+        Experience life-changing health transformation
     image:
     favicon:
     index: true
