Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@ blocks:
             Now</a></p>
         background-desktop-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
         background-mobile-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
-        background-alt:
         videos:
-            - video_path: /uploads/WEBSITE-BANNER.mp4
-              video_type: mp4
+            -
+                video_path: /uploads/WEBSITE-BANNER.mp4
+                video_type: mp4
+        background-alt:
         desktop-image-position: left
         text-alignment: left
         vert-alignment: bottom
@@ -75,54 +76,83 @@ blocks:
             -
                 image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
                 block-content-html: >-
-                    <h3>STRATEGIC</h3> <h2>Modern design</h2> <p>We’ll consider all the best-practices of modern design and create a structure that balances heritage with an intuitive  user experience. </p>
+                    <h3>STRATEGIC</h3> <h2>Modern design</h2> <p>We’ll consider
+                    all the best-practices of modern design and create a
+                    structure that balances heritage with an intuitive  user
+                    experience. </p>
                 link:
             -
                 image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
                 block-content-html: >-
-                    <h3>FLEXIBLE</h3> <h2>Designed to grow</h2> <p>We’ll build custom modular blocks that allow you to build unlimited pages and adapt to future needs, in a way that’s easy for your team to manage. </p>
+                    <h3>FLEXIBLE</h3> <h2>Designed to grow</h2> <p>We’ll build
+                    custom modular blocks that allow you to build unlimited
+                    pages and adapt to future needs, in a way that’s easy for
+                    your team to manage. </p>
                 link:
             -
                 image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
                 block-content-html: >-
-                    <h3>RESPONSIVE</h3> <h2>Mobile-friendly</h2> <p>We’ll ensure the website not only looks great across every browser & device but also that it’s thoughtfully designed for mobile users.</p>
+                    <h3>RESPONSIVE</h3> <h2>Mobile-friendly</h2> <p>We’ll ensure
+                    the website not only looks great across every browser &
+                    device but also that it’s thoughtfully designed for mobile
+                    users.</p>
                 link:
             -
                 image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
                 block-content-html: >-
-                    <h3>PERFORMANCE </h3> <h2>Optimised for speed</h2> <p>Built with modern tech stack and optimised for speed & performance at every stage of the project to ensure the site loads lighting fast. </p>
+                    <h3>PERFORMANCE </h3> <h2>Optimised for speed</h2> <p>Built
+                    with modern tech stack and optimised for speed & performance
+                    at every stage of the project to ensure the site loads
+                    lighting fast. </p>
                 link:
             -
                 image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
                 block-content-html: >-
-                    <h3>SEARCH OPTIMISATION </h3> <h2>Built-in SEO</h2> <p>Designed to meet all of Google’s performance standards & with built-in editable meta-fields on every page for seamless SEO management. </p>
+                    <h3>SEARCH OPTIMISATION </h3> <h2>Built-in SEO</h2>
+                    <p>Designed to meet all of Google’s performance standards &
+                    with built-in editable meta-fields on every page for
+                    seamless SEO management. </p>
                 link:
             -
                 image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
                 block-content-html: >-
-                    <h3>RELIABILITY</h3> <h2>100% Uptime</h2> <p>We use fast, reliable website hosting for guaranteed uptime, leveraging a content delivery network for global speed and SSL for security.  </p>
+                    <h3>RELIABILITY</h3> <h2>100% Uptime</h2> <p>We use fast,
+                    reliable website hosting for guaranteed uptime, leveraging a
+                    content delivery network for global speed and SSL for
+                    security.  </p>
                 link:
             -
                 image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
                 block-content-html: >-
-                    <h3>SAFETY</h3> <h2>Backups & Security</h2> <p>We provide daily backups of the website and guaranteed security against the site being hacked, including all code used in the site. </p>
+                    <h3>SAFETY</h3> <h2>Backups & Security</h2> <p>We provide
+                    daily backups of the website and guaranteed security against
+                    the site being hacked, including all code used in the site.
+                    </p>
                 link:
             -
                 image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
                 block-content-html: >-
-                    <h3>LEAD GENERATION</h3> <h2>Interactive elements</h2> <p>From carousels & galleries to pop-ups and FAQs we’ll create all the interactive elements you need to satsify every marketing goal. </p>
+                    <h3>LEAD GENERATION</h3> <h2>Interactive elements</h2>
+                    <p>From carousels & galleries to pop-ups and FAQs we’ll
+                    create all the interactive elements you need to satsify
+                    every marketing goal. </p>
                 link:
             -
                 image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
                 block-content-html: >-
-                    <h3>LEAD GENERATION</h3> <h2>Form builder</h2> <p>We’ll build you a custom form builder to let your team add landing pages & tailored lead generation forms on-demand without understanding code.</p>
+                    <h3>LEAD GENERATION</h3> <h2>Form builder</h2> <p>We’ll
+                    build you a custom form builder to let your team add landing
+                    pages & tailored lead generation forms on-demand without
+                    understanding code.</p>
                 link:
             -
                 image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
                 block-content-html: >-
-                    <h3>ESSENTIAL DATA</h3> <h2>Tracking & Analytics</h2> <p>Full control over your tracking codes (including Facebook, Google, Pinterest), and analytics as well as any other verification you might need. </p>
+                    <h3>ESSENTIAL DATA</h3> <h2>Tracking & Analytics</h2>
+                    <p>Full control over your tracking codes (including
+                    Facebook, Google, Pinterest), and analytics as well as any
+                    other verification you might need. </p>
                 link:
-            
         color-scheme: leaf-300
     -
         _id: accordion
@@ -189,11 +219,44 @@ blocks:
         collapse-top-space: false
         collapse-bottom-space: false
         color-scheme: leaf-500
+    -
+        _id: slider
+        block-content-html: <h2> Slider heading </h2><h3>  with subheading  </h3>
+        text-alignment: right
+        text-box-max-width: 500px
+        img_aspect: Original
+        video_aspect: Testimonials
+        slider_column_count: 3
+        slider_col_color_scheme: leaf-500
+        slider:
+            -
+                block-content-html: <h3> lorem </h3><h2>  experiences  </h2>
+                youtube_embed:
+                youtube_placeholder:
+                image:
+                link:
+            -
+                block-content-html: <h3> lorem </h3><h2>  experiences  </h2>
+                youtube_embed:
+                youtube_placeholder:
+                image:
+                link:
+            -
+                block-content-html: <h3> lorem </h3><h2>  experiences  </h2>
+                youtube_embed:
+                youtube_placeholder:
+                image:
+                link:
+            -
+                block-content-html: <h3> lorem </h3><h2>  experiences  </h2>
+                youtube_embed:
+                youtube_placeholder:
+                image:
+                link:
+        color-scheme: leaf-500
 seo:
-    title: >-
-        Reagent
-    description: >-
-        Experience life-changing health transformation
+    title: Reagent
+    description: Experience life-changing health transformation
     image:
     favicon:
     index: true
