color first passe

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ blocks:
     -
         _id: text-block-top-overlap
         block-content-html: "<h3>REGENT BALI CANGGU</h3><h2 class=\"heading-lg\">A coastal haven where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are silhouetted in the morning sun, boards  under arms ready to take on Bali's famous reef breaks.\_Watching the  waves, listening to the call of the Indian Ocean, you might catch the  scent of incense or the melody of the gamelan emitting from Pura Batu  Mejan, a centuries old sea temple set on rock as black as jet. A blessed way to begin each day.</p><p>A METICULOUSLY CURATED RESORT DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR YOU.</p> <a href=\"\" class=\"button-featured\">DOWNLOAD PROPOSAL</a>"
+        overlay-color-scheme: highlight
         content-max-width: 44rem
         text-alignment: center
         color-scheme: base
@@ -63,7 +64,8 @@ blocks:
             only beautiful but that also optimised for speed, performance,
             mobile-friendliness and SEO.</p>
         image-width: max(25%,  8rem)
-        img_aspect: Portrait
+        img_aspect: Square
+        scroll-items-color-scheme: highlight
         scroll-items:
             -
                 image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
