Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -157,6 +157,36 @@ blocks:
                 link:
         color-scheme: base
     -
+        _id: slider
+        block-content-html: >-
+            <h2> Spaces to explore</h2><p>Where most websites confine your
+            content to rigid aspect ratios, we design with freedom in mind. Our
+            designs support felexible layouts that adapt seamlessly to your
+            unique imagery —whether it's panoramic, vertical, or cinematic—to
+            tell your story in its most powerful form.</p>
+        text-alignment: center
+        text-box-max-width: 350px
+        slider:
+            -
+                image: https://picsum.photos/id/1025/600/400
+                video_path:
+                video_type:
+                video_aspect_ratio:
+                link:
+            -
+                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+                video_path: /uploads/WEBSITE-BANNER.mp4
+                video_type: mp4
+                video_aspect_ratio: 2
+                link:
+            -
+                image: https://picsum.photos/id/1025/600/800
+                video_path:
+                video_type:
+                video_aspect_ratio:
+                link:
+        color-scheme: dark
+    -
         _id: accordion
         block-content-html: <h2 class="heading-lg"> FREQUENTLY ASKED QUESTIONS </h2>
         drop_down:
@@ -201,49 +231,6 @@ blocks:
         text-alignment: center
         color-scheme: base
         min-height: 50vh
-    -
-        _id: banner-split-video
-        block-content-html: "<h3>HIGH IMPACT VISUALS</h3><h2>Designed to captivate\L&amp; enchant</h2><p>With a strong understanding of both the Regent brand &amp; the resort itself, we bring a depth of knowledge that allows us to thoughtfully create a digital experience that captivates and enchants. That brings the magic of the Regent brand to live on the screen and leverages all of the high-impact visuals we’re created for you to a modern new website. <br /><br />Rich visual experiences, intentional storytelling and subtle animations &amp; interactions give an experience that brings joy (and increases direct bookings).</p>"
-        background-desktop-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
-        background-mobile-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
-        videos:
-            -
-                video_path: /uploads/WEBSITE-BANNER.mp4
-                video_type: mp4
-        background-alt:
-        desktop-collapse-bg-padding: true
-        desktop-image-position: left
-        text-alignment: left
-        vert-alignment: bottom
-        mobile-image-position: bottom
-        mobile-collapse-bg-padding: true
-        img_aspect: Square
-        collapse-top-space: false
-        collapse-bottom-space: false
-        color-scheme: dark
-    -
-        _id: slider
-        block-content-html: <h2> Spaces to explore</h2><p>Where most websites confine your content to rigid aspect ratios, we design with freedom in mind. Our designs support felexible layouts that adapt seamlessly to your unique imagery —whether it's panoramic, vertical, or cinematic—to tell your story in its most powerful form.</p>
-        text-alignment: center
-        text-box-max-width: 350px
-        slider:
-            - image: https://picsum.photos/id/1025/600/400
-              video_path: 
-              video_type:
-              video_aspect_ratio:
-              link:
-            - image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
-              video_path: /uploads/WEBSITE-BANNER.mp4
-              video_type: mp4
-              video_aspect_ratio: 2
-              link:
-            - image: https://picsum.photos/id/1025/600/800
-              video_path: 
-              video_type:
-              video_aspect_ratio:
-              link:
-            
-        color-scheme: dark
 seo:
     title: Reagent
     description: Experience life-changing health transformation
@@ -252,5 +239,4 @@ seo:
     index: true
 permalink:
 ---
-
 \
