post screen shot changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ blocks:
         color-scheme: dark
     -
         _id: text-block-top-overlap
-        block-content-html: "<h3>REGENT BALI CANGGU</h3><h2 class=\"heading-lg\">A coastal haven where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are silhouetted in the morning sun, boards  under arms ready to take on Bali's famous reef breaks.\_Watching the  waves, listening to the call of the Indian Ocean, you might catch the  scent of incense or the melody of the gamelan emitting from Pura Batu  Mejan, a centuries old sea temple set on rock as black as jet. A blessed way to begin each day.</p><p>A METICULOUSLY CURATED RESORT DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR YOU.</p> <a href=\"\" class=\"button-featured\">DOWNLOAD PROPOSAL</a>"
+        block-content-html: "<h3>REGENT BALI CANGGU</h3><h2 class=\"heading-lg\">A coastal haven where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are silhouetted in the morning sun, boards  under arms ready to take on Bali's famous reef breaks.\_Watching the  waves, listening to the call of the Indian Ocean, you might catch the  scent of incense or the melody of the gamelan emitting from Pura Batu  Mejan, a centuries old sea temple set on rock as black as jet. A blessed way to begin each day.</p><h3>A METICULOUSLY CURATED RESORT DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR YOU.</h3> <a href=\"\" class=\"button-featured\">DOWNLOAD PROPOSAL</a>"
         overlay-color-scheme: highlight
         content-max-width: 44rem
         text-alignment: center
@@ -50,6 +50,7 @@ blocks:
         text-alignment: left
         vert-alignment: bottom
         mobile-image-position: bottom
+        max-height: 80vh
         img_aspect: Portrait
         collapse-top-space: false
         collapse-bottom-space: false
@@ -57,8 +58,8 @@ blocks:
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
-            <h3 class="sub-heading">WORKING WITH US</h3><h2
-            class="heading-lg">Extraordinary tailored digital
+            <h3 class="">WORKING WITH US</h3><h2
+            class="">Extraordinary tailored digital
             presence</h2><p>With over a decade of experience in web development,
             and a dedication best-practices we’ll build you a website that’s not
             only beautiful but that also optimised for speed, performance,
@@ -188,7 +189,7 @@ blocks:
         color-scheme: dark
     -
         _id: accordion
-        block-content-html: <h2 class="heading-lg"> FREQUENTLY ASKED QUESTIONS </h2>
+        block-content-html: <h3> FREQUENTLY ASKED QUESTIONS </h3>
         drop_down:
             -
                 button-text: 'How do I get there? '
@@ -212,24 +213,24 @@ blocks:
             -
                 button-text: What’s the difference between the room types?
                 block-content-html: ''
-        color-scheme:
+        color-scheme: highlight
     -
-        _id: banner
-        block-content-html: <h2></h2>
+        _id: banner-bg-fixed
+        block-content-html: <h2>Every view, one to covet. <br /> Every moment, one to savour. <br /> Every stay, another story to tell. <br /> this is the place <br/> <br/> This is Regent </h2>
         content-max-width:
         background-desktop-image: /uploads/screenshot-2025-06-05-at-3-19-14-pm-1.png
         background-mobile-image:
         text-alignment: center
         vert-alignment: middle
-        overlay-opacity: 0.5op
+        overlay-opacity: 0
         min-height: 80vh
-        color-scheme: base
+        color-scheme: highlight
     -
         _id: text-block
         block-content-html: "<h2>It would be our pleasure to work together on the new Regent Bali Canggu website.</h2><p></p><p>Our team combines high-end visual design with robust, future-focused development—delivering a digital experience that’s as elegant and intuitive as the property itself.<br /><br />We specialize in creating flexible, content-driven designs that showcase luxury spaces in their best light, capturing the essence of your property through elegant visuals, adaptive layouts, and a seamless user experience. Every element will be crafted to support your brand, engage your audience, and provide your team with intuitive tools for easy updates and future growth.<br />\L- Sincerely, Kelapa Creative Team.</p><p><a class=\"button-featured\" href=\"/temp.pdf\">DOWNLOAD PROPOSAL</a></p>"
         content-max-width:
         text-alignment: center
-        color-scheme: base
+        color-scheme: dark
         min-height: 50vh
 seo:
     title: Reagent
