Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@ blocks:
         color-scheme: dark
         min-height: 50vh
 seo:
-    title: Reagent
-    description: Experience life-changing health transformation
+    title: Regent Website Proposal | Kelapa Creative
+    description: Website Proposal by Kelapa Creative
     image:
     favicon:
     index: true
